fixed bad contrast on disabled button

--- a/sass/layout/_forms.scss
+++ b/sass/layout/_forms.scss
@@ -372,3 +372,9 @@ fieldset legend {
 select#vid, select#sid {
   width: 100%;
 }
+
+button.btn.btn-primary:disabled {
+  background-color: grey;
+  cursor: not-allowed;
+  color: black;
+}
